@@ -3,584 +3,373 @@ package es.uclm.library.controllerTest;
 import es.uclm.library.business.controller.GestorPedidos;
 import es.uclm.library.business.entity.*;
 import es.uclm.library.business.service.*;
-import es.uclm.library.persistence.ItemPedidoDAO;
-import jakarta.persistence.EntityManager;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import es.uclm.library.persistence.*;
+import jakarta.servlet.http.HttpSession;
+import org.junit.jupiter.api.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.springframework.ui.Model;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.test.web.servlet.MockMvc;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
-import java.util.HashSet;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-@ExtendWith(SpringExtension.class)
-@WebMvcTest(GestorPedidos.class)
-public class GestorPedidosTest {
+@ExtendWith(MockitoExtension.class)
+class GestorPedidosTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @MockBean
-    private PedidoService pedidoService;
-    @MockBean
-    private RepartoService repartoService;
-    @MockBean
-    private RestauranteService restauranteService;
-    @MockBean
+    @Mock
     private LoginService loginService;
-    @MockBean
+
+    @Mock
+    private RepartoService RepartoService;
+
+    @Mock
+    private RestauranteService restauranteService;
+
+    @Mock
     private ItemPedidoDAO itemPedidoDAO;
-    @MockBean
-    private EntityManager entityManager;
 
+    @Mock
+    private PedidoService pedidoService;
+
+    @Mock
+    private HttpSession session;
+
+    @Mock
+    private Model model;
+
+    @InjectMocks
+    private GestorPedidos gestorPedidos;
+
+    @BeforeEach
+    void setup() {
+        MockitoAnnotations.openMocks(this);
+    }
+
+    //Test ListarRestaurantes
     @Test
-    @DisplayName("GET /RealizarPedido - createPedidoItems inicializa lista vacía")
-    void createPedidoItems_devuelveListaVacia() throws Exception {
-        mockMvc.perform(get("/RealizarPedido"))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("pedidoItems"))
-                .andExpect(model().attribute("pedidoItems", List.of()));
+    @DisplayName("CU1 - Email válido, cliente con favoritos, restaurantes disponibles")
+    void testListarRestaurantes_ClienteConFavoritos() {
+        // Datos
+        String email = "cliente1@mail.com";
+        Restaurante rest1 = new Restaurante(); rest1.setNombre("Rest1");
+        Restaurante rest2 = new Restaurante(); rest2.setNombre("Rest2");
+        Restaurante rest3 = new Restaurante(); rest3.setNombre("Rest3");
+        List<Restaurante> favoritos = Arrays.asList(rest1, rest2);
+        List<Restaurante> todos = Arrays.asList(rest1, rest2, rest3);
+        Usuario usuario = new Usuario();
+        Cliente cliente = new Cliente();
+        cliente.setFavoritos(favoritos);
+
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(email)).thenReturn(usuario);
+        when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
+        when(restauranteService.obtenerTodosRestaurantes()).thenReturn(todos);
+
+        String vista = gestorPedidos.listarRestaurantes(model, session);
+
+        // Verificaciones
+        verify(model).addAttribute("cliente", cliente);
+        verify(model).addAttribute(eq("restaurantes"), argThat(lista ->
+                lista instanceof List && ((List<?>) lista).size() == 3 &&
+                        ((List<?>) lista).get(0).equals(rest1)
+        ));
+        assertEquals("RealizarPedido", vista);
     }
 
     @Test
-    @DisplayName("GET /RealizarPedido - calculateItemFrequencies calcula correctamente las frecuencias")
-    void calculateItemFrequencies_devuelveFrecuenciasCorrectas() throws Exception {
-        ItemPedido item1 = new ItemPedido();
-        item1.setTipo(TipoItemMenu.valueOf("Plato"));
-        item1.setNombre("Pizza");
-        item1.setPrecio(10.0);
-        item1.setCantidad(1);
-        item1.setId(1L);
+    @DisplayName("CU2 - Sin email, cliente null, lista vacía de restaurantes")
+    void testListarRestaurantes_SinCliente() {
+        when(session.getAttribute("email")).thenReturn(null);
+        when(restauranteService.obtenerTodosRestaurantes()).thenReturn(Collections.emptyList());
 
-        ItemPedido item2 = new ItemPedido();
-        item2.setTipo(TipoItemMenu.valueOf("Plato"));
-        item2.setNombre("Pizza");
-        item2.setPrecio(10.0);
-        item2.setCantidad(1);
-        item2.setId(1L);
+        String vista = gestorPedidos.listarRestaurantes(model, session);
 
-        ItemPedido persistido = new ItemPedido();
-        persistido.setTipo(TipoItemMenu.valueOf("Plato"));
-        persistido.setNombre("Pizza");
-        persistido.setPrecio(10.0);
-        persistido.setCantidad(1);
-        persistido.setId(1L);
-
-        Mockito.when(itemPedidoDAO.findById(1L)).thenReturn(java.util.Optional.of(persistido));
-
-        mockMvc.perform(get("/RealizarPedido")
-                        .flashAttr("pedidoItems", List.of(item1, item2)))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("itemFrequencies"))
-                .andExpect(model().attribute("itemFrequencies", org.hamcrest.Matchers.hasSize(1)));
+        verify(model).addAttribute(eq("restaurantes"), eq(Collections.emptyList()));
+        assertEquals("RealizarPedido", vista);
     }
+
+    //Test MostrarRestaurantePedido
     @Test
-    @DisplayName("GET /RealizarPedido/cartas - retorna fragmento con cartas del restaurante")
-    void cargarCartas_devuelveCartasFragment() throws Exception {
+    @DisplayName("CU1 - restauranteId válido, cartaId válido, cartas con contenido, carta con ítems")
+    void testMostrarRestaurantePedido_CasoCompleto() {
+        Long restauranteId = 1L;
+        Long cartaId = 8L;
+
         CartaMenu carta1 = new CartaMenu();
-        carta1.setId(101L);
+        CartaMenu carta2 = new CartaMenu();
 
-        Mockito.when(restauranteService.obtenerCartasPorRestaurante(1L)).thenReturn(List.of(carta1));
+        ItemMenu item1 = new ItemMenu(); item1.setNombre("Item1");
+        ItemMenu item2 = new ItemMenu(); item2.setNombre("Item2");
+        ItemMenu item3 = new ItemMenu(); item3.setNombre("Item3");
 
-        mockMvc.perform(get("/RealizarPedido/cartas")
-                        .param("restauranteId", "1"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("cartas :: cartasFragment"))
-                .andExpect(model().attributeExists("cartasMenu"))
-                .andExpect(model().attribute("cartasMenu", org.hamcrest.Matchers.hasSize(1)));
+        carta1.setItems(List.of(item1, item2, item3));
+
+        when(restauranteService.obtenerCartasPorRestaurante(restauranteId)).thenReturn(List.of(carta1, carta2));
+        when(restauranteService.obtenerCartaPorId(cartaId)).thenReturn(carta1);
+
+        String vista = gestorPedidos.mostrarRestaurantePedido(restauranteId, cartaId, model);
+
+        verify(model).addAttribute("cartasMenu", List.of(carta1, carta2));
+        verify(model).addAttribute("restauranteId", restauranteId);
+        verify(model).addAttribute("items", carta1.getItems());
+        verify(model).addAttribute("selectedCartaId", cartaId);
+        assertEquals("RestaurantePedido", vista);
     }
 
     @Test
-    @DisplayName("GET /RealizarPedido/ListaRestaurantes - con cliente válido y favoritos")
-    void listarRestaurantes_conSesionYFavoritos_devuelveVistaConModeloPersonalizado() throws Exception {
-        Usuario usuario = new Usuario();
+    @DisplayName("CU2 - restauranteId inválido, cartaId nulo, cartas vacías")
+    void testMostrarRestaurantePedido_SinCarta() {
+        Long restauranteId = 999L;
+        Long cartaId = null;
+
+        when(restauranteService.obtenerCartasPorRestaurante(restauranteId)).thenReturn(Collections.emptyList());
+
+        String vista = gestorPedidos.mostrarRestaurantePedido(restauranteId, cartaId, model);
+
+        verify(model).addAttribute("cartasMenu", Collections.emptyList());
+        verify(model).addAttribute("restauranteId", restauranteId);
+        verify(model, never()).addAttribute(eq("items"), any());
+        verify(model, never()).addAttribute(eq("selectedCartaId"), any());
+        assertEquals("RestaurantePedido", vista);
+    }
+
+    @Test
+    @DisplayName("CU3 - restauranteId nulo, cartaId inválido, carta sin ítems")
+    void testMostrarRestaurantePedido_RestauranteNuloCartaInvalida() {
+        Long restauranteId = null;
+        Long cartaId = 999L;
+
+        CartaMenu carta1 = new CartaMenu();
+        CartaMenu carta2 = new CartaMenu();
+        carta1.setItems(Collections.emptyList());
+
+        when(restauranteService.obtenerCartasPorRestaurante(restauranteId)).thenReturn(List.of(carta1, carta2));
+        when(restauranteService.obtenerCartaPorId(cartaId)).thenReturn(carta1);
+
+        String vista = gestorPedidos.mostrarRestaurantePedido(restauranteId, cartaId, model);
+
+        verify(model).addAttribute("cartasMenu", List.of(carta1, carta2));
+        verify(model).addAttribute("restauranteId", restauranteId);
+        verify(model).addAttribute("items", Collections.emptyList());
+        verify(model).addAttribute("selectedCartaId", cartaId);
+        assertEquals("RestaurantePedido", vista);
+    }
+
+    //Test agregarItem
+    @Test
+    @DisplayName("CU1 - itemId válido, lista vacía de pedidoItems → se añade nuevo item")
+    void testAgregarItem_NuevoItemEnListaVacia() {
+        Long itemId = 5L;
+        List<ItemPedido> pedidoItems = Collections.synchronizedList(new java.util.ArrayList<>());
+        ItemMenu itemMenu = new ItemMenu();
+        itemMenu.setNombre("Pizza");
+        itemMenu.setPrecio(10.0);
+        itemMenu.setTipo(TipoItemMenu.PRIMER_PLATO);
+
+        when(restauranteService.obtenerItemPorId(itemId)).thenReturn(itemMenu);
+
+        String vista = gestorPedidos.agregarItem(itemId, pedidoItems, model);
+
+        assertEquals(1, pedidoItems.size());
+        assertEquals("Pizza", pedidoItems.get(0).getNombre());
+        assertEquals(1, pedidoItems.get(0).getCantidad());
+        assertEquals("RestaurantePedido :: pedidoResumen", vista);
+        verify(model).addAttribute(eq("pedidoItems"), eq(pedidoItems));
+        verify(model).addAttribute(eq("total"), eq(10.0));
+        verify(model).addAttribute(eq("itemFrequencies"), any());
+    }
+
+    @Test
+    @DisplayName("CU2 - itemId inexistente, lista con varios ítems → no se añade nada")
+    void testAgregarItem_ItemNoExistente() {
+        Long itemId = 999L;
+        List<ItemPedido> pedidoItems = Arrays.asList(
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Pizza", 10.0, 1),
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Hamburguesa", 12.0, 1)
+        );
+
+        when(restauranteService.obtenerItemPorId(itemId)).thenReturn(null); // simulamos item no existente
+
+        assertThrows(NullPointerException.class, () -> {
+            gestorPedidos.agregarItem(itemId, pedidoItems, model);
+        });
+    }
+
+    @Test
+    @DisplayName("CU3 - itemId es null → se lanza excepción")
+    void testAgregarItem_ItemIdNull_LanzaExcepcion() {
+        Long itemId = null;
+        List<ItemPedido> pedidoItems = new java.util.ArrayList<>();
+
+        when(restauranteService.obtenerItemPorId(itemId)).thenReturn(null);
+
+        assertThrows(NullPointerException.class, () -> {
+            gestorPedidos.agregarItem(itemId, pedidoItems, model);
+        }
+        );
+    }
+
+    //Test RealizarPedido
+
+    @Test
+    @DisplayName("CU1 - Pedido correcto con cliente y restaurante válidos")
+    void testRealizarPedido_OK() {
+        Long restauranteId = 5L;
+        String email = "cliente@mail.com";
+
         Cliente cliente = new Cliente();
-
-        Restaurante rest1 = new Restaurante(); rest1.setNombre("Favorito");
-        Restaurante rest2 = new Restaurante(); rest2.setNombre("NoFavorito");
-
-        cliente.setFavoritos(new HashSet<>(Set.of(rest1)));
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(restauranteService.obtenerTodosRestaurantes()).thenReturn(List.of(rest1, rest2));
-
-        mockMvc.perform(get("/RealizarPedido/ListaRestaurantes")
-                        .sessionAttr("email", "cliente@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("RealizarPedido"))
-                .andExpect(model().attributeExists("restaurantes"))
-                .andExpect(model().attribute("restaurantes", org.hamcrest.Matchers.hasSize(2)));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/ListaRestaurantes - sin sesión carga restaurantes sin personalizar")
-    void listarRestaurantes_sinSesion_devuelveVistaConTodos() throws Exception {
-        Restaurante rest1 = new Restaurante(); rest1.setNombre("Restaurante1");
-        Restaurante rest2 = new Restaurante(); rest2.setNombre("Restaurante2");
-
-        Mockito.when(restauranteService.obtenerTodosRestaurantes()).thenReturn(List.of(rest1, rest2));
-
-        mockMvc.perform(get("/RealizarPedido/ListaRestaurantes"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("RealizarPedido"))
-                .andExpect(model().attributeExists("restaurantes"))
-                .andExpect(model().attribute("restaurantes", org.hamcrest.Matchers.hasSize(2)));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/ListaRestaurantes - email sin cliente devuelve todos")
-    void listarRestaurantes_emailSinCliente_devuelveTodosRestaurantes() throws Exception {
-        Usuario usuario = new Usuario();
-
-        Restaurante rest = new Restaurante(); rest.setNombre("Restaurante Libre");
-
-        Mockito.when(loginService.findUsuarioById("otro@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(null);
-        Mockito.when(restauranteService.obtenerTodosRestaurantes()).thenReturn(List.of(rest));
-
-        mockMvc.perform(get("/RealizarPedido/ListaRestaurantes")
-                        .sessionAttr("email", "otro@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("RealizarPedido"))
-                .andExpect(model().attributeExists("restaurantes"))
-                .andExpect(model().attribute("restaurantes", org.hamcrest.Matchers.hasSize(1)));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/RestaurantePedido - con cartaId muestra items de carta")
-    void mostrarRestaurantePedido_conCartaYRestaurante_devuelveVistaYItems() throws Exception {
-        CartaMenu carta = new CartaMenu();
-        carta.setId(5L);
-
-        ItemMenu item = new ItemMenu();
-        item.setNombre("Pizza");
-        carta.setItems(List.of(item));
-
-        Mockito.when(restauranteService.obtenerCartasPorRestaurante(1L)).thenReturn(List.of(carta));
-        Mockito.when(restauranteService.obtenerCartaPorId(5L)).thenReturn(carta);
-
-        mockMvc.perform(get("/RealizarPedido/RestaurantePedido")
-                        .param("restauranteId", "1")
-                        .param("cartaId", "5"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("RestaurantePedido"))
-                .andExpect(model().attributeExists("items"))
-                .andExpect(model().attribute("items", org.hamcrest.Matchers.hasSize(1)))
-                .andExpect(model().attribute("selectedCartaId", 5L));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/RestaurantePedido - sin cartaId solo carga cartas")
-    void mostrarRestaurantePedido_soloCartas_devuelveVistaSinItems() throws Exception {
-        CartaMenu carta = new CartaMenu();
-        carta.setId(7L);
-
-        Mockito.when(restauranteService.obtenerCartasPorRestaurante(2L)).thenReturn(List.of(carta));
-
-        mockMvc.perform(get("/RealizarPedido/RestaurantePedido")
-                        .param("restauranteId", "2"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("RestaurantePedido"))
-                .andExpect(model().attributeExists("cartasMenu"))
-                .andExpect(model().attributeDoesNotExist("items"));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/agregarItem - item nuevo se agrega a la lista")
-    void agregarItem_itemNuevo_seAgrega() throws Exception {
-        ItemMenu itemMenu = new ItemMenu();
-        itemMenu.setNombre("CocaCola");
-        itemMenu.setPrecio(2.5);
-        itemMenu.setTipo(TipoItemMenu.BEBIDA);
-
-        Mockito.when(restauranteService.obtenerItemPorId(1L)).thenReturn(itemMenu);
-
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/agregarItem")
-                        .param("itemId", "1")
-                        .flashAttr("pedidoItems", new ArrayList<>()))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("pedidoItems", "total", "itemFrequencies"));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/agregarItem - item repetido incrementa cantidad")
-    void agregarItem_itemRepetido_incrementaCantidad() throws Exception {
-        ItemMenu itemMenu = new ItemMenu();
-        itemMenu.setNombre("CocaCola");
-        itemMenu.setPrecio(2.5);
-        itemMenu.setTipo(TipoItemMenu.BEBIDA);
-
-        ItemPedido existente = new ItemPedido();
-        existente.setNombre("CocaCola");
-        existente.setTipo(TipoItemMenu.BEBIDA);
-        existente.setPrecio(2.5);
-        existente.setCantidad(1);
-
-        Mockito.when(restauranteService.obtenerItemPorId(1L)).thenReturn(itemMenu);
-
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/agregarItem")
-                        .param("itemId", "1")
-                        .flashAttr("pedidoItems", new ArrayList<>(List.of(existente))))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("pedidoItems", "total", "itemFrequencies"))
-                .andExpect(model().attribute("pedidoItems", org.hamcrest.Matchers.hasItem(org.hamcrest.Matchers.hasProperty("cantidad", org.hamcrest.Matchers.equalTo(2)))));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/quitarItem - elimina item por nombre")
-    void quitarItem_itemExistente_seEliminaDeLista() throws Exception {
-        ItemMenu itemMenu = new ItemMenu();
-        itemMenu.setNombre("CocaCola");
-
-        ItemPedido existente = new ItemPedido();
-        existente.setNombre("CocaCola");
-        existente.setTipo(TipoItemMenu.BEBIDA);
-        existente.setPrecio(2.5);
-        existente.setCantidad(1);
-
-        Mockito.when(restauranteService.obtenerItemPorId(1L)).thenReturn(itemMenu);
-
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/quitarItem")
-                        .param("itemId", "1")
-                        .flashAttr("pedidoItems", new ArrayList<>(List.of(existente))))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("pedidoItems", "total", "itemFrequencies"))
-                .andExpect(model().attribute("pedidoItems", org.hamcrest.Matchers.not(org.hamcrest.Matchers.hasItem(org.hamcrest.Matchers.hasProperty("nombre", org.hamcrest.Matchers.equalTo("CocaCola"))))));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/quitarItem - no elimina si nombre no coincide")
-    void quitarItem_nombreNoCoincide_listaSeMantiene() throws Exception {
-        ItemMenu itemMenu = new ItemMenu();
-        itemMenu.setNombre("Fanta");
-
-        ItemPedido existente = new ItemPedido();
-        existente.setNombre("CocaCola");
-        existente.setTipo(TipoItemMenu.BEBIDA);
-        existente.setPrecio(2.5);
-        existente.setCantidad(1);
-
-        Mockito.when(restauranteService.obtenerItemPorId(1L)).thenReturn(itemMenu);
-
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/quitarItem")
-                        .param("itemId", "1")
-                        .flashAttr("pedidoItems", new ArrayList<>(List.of(existente))))
-                .andExpect(status().isOk())
-                .andExpect(model().attributeExists("pedidoItems", "total", "itemFrequencies"))
-                .andExpect(model().attribute("pedidoItems", org.hamcrest.Matchers.hasSize(1)));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/marcarFavorito - cliente logueado marca restaurante")
-    void marcarFavorito_usuarioLogueado_agregaRestauranteAFavoritos() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente();
-        cliente.setFavoritos(new HashSet<>());
         Restaurante restaurante = new Restaurante();
+        List<ItemPedido> pedidoItems = new java.util.ArrayList<>(List.of(
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Pizza", 10.0, 1),
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Hamburguesa", 8.0, 1)
+        ));
 
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(entityManager.find(Restaurante.class, 1L)).thenReturn(restaurante);
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(email)).thenReturn(new Usuario());
+        when(loginService.findClienteByUsuario(any())).thenReturn(cliente);
+        when(restauranteService.obtenerRestaurantePorId(restauranteId)).thenReturn(restaurante);
 
-        mockMvc.perform(post("/RealizarPedido/marcarFavorito")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("restauranteId", "1"))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/RealizarPedido/ListaRestaurantes"));
-
-        assertThat(cliente.getFavoritos()).contains(restaurante);
-        Mockito.verify(loginService).updateCliente(cliente);
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/marcarFavorito - sin sesión redirige con error")
-    void marcarFavorito_sinSesion_redirigeLista() throws Exception {
-        mockMvc.perform(post("/RealizarPedido/marcarFavorito")
-                        .param("restauranteId", "1"))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/RealizarPedido/ListaRestaurantes"));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/toggleFavorito - marca restaurante como favorito")
-    void toggleFavorito_checkedTrue_agregaFavorito() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente(); cliente.setFavoritos(new HashSet<>());
-        Restaurante restaurante = new Restaurante();
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(entityManager.find(Restaurante.class, 1L)).thenReturn(restaurante);
-
-        mockMvc.perform(post("/RealizarPedido/toggleFavorito")
-                        .param("restauranteId", "1")
-                        .param("isChecked", "true")
-                        .sessionAttr("email", "cliente@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Success"));
-
-        assertThat(cliente.getFavoritos()).contains(restaurante);
-        Mockito.verify(loginService).updateCliente(cliente);
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/toggleFavorito - desmarca restaurante como favorito")
-    void toggleFavorito_checkedFalse_eliminaFavorito() throws Exception {
-        Usuario usuario = new Usuario();
-        Restaurante restaurante = new Restaurante();
-        Cliente cliente = new Cliente(); cliente.setFavoritos(new HashSet<>(Set.of(restaurante)));
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(entityManager.find(Restaurante.class, 1L)).thenReturn(restaurante);
-
-        mockMvc.perform(post("/RealizarPedido/toggleFavorito")
-                        .param("restauranteId", "1")
-                        .param("isChecked", "false")
-                        .sessionAttr("email", "cliente@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Success"));
-
-        assertThat(cliente.getFavoritos()).doesNotContain(restaurante);
-        Mockito.verify(loginService).updateCliente(cliente);
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/toggleFavorito - sin sesión devuelve Error")
-    void toggleFavorito_sinSesion_devuelveError() throws Exception {
-        mockMvc.perform(post("/RealizarPedido/toggleFavorito")
-                        .param("restauranteId", "1")
-                        .param("isChecked", "true"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Error"));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/realizarPedido - cliente válido y items válidos")
-    void realizarPedido_clienteYItemsValidos_creaPedidoYRedirige() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente(); cliente.setDirecciones(new HashSet<>());
-        Restaurante restaurante = new Restaurante(1L);
-
-        ItemPedido item = new ItemPedido();
-        item.setNombre("Pizza");
-        item.setCantidad(1);
-        item.setPrecio(10.0);
-        item.setTipo(TipoItemMenu.valueOf("Plato"));
-
-        Pedido pedido = new Pedido();
-        ReflectionTestUtils.setField(pedido, "id", 99L);
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(restauranteService.obtenerRestaurantePorId(1L)).thenReturn(restaurante);
-        Mockito.doAnswer(invocation -> {
-            Pedido p = invocation.getArgument(0);
-            ReflectionTestUtils.setField(p, "id", 99L);
+        doAnswer(inv -> {
+            Pedido p = inv.getArgument(0);
+            p.setId(123L);
             return null;
-        }).when(pedidoService).crearPedido(Mockito.any(Pedido.class));
+        }).when(pedidoService).crearPedido(any(Pedido.class));
 
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/realizarPedido")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("restauranteId", "1")
-                        .flashAttr("pedidoItems", List.of(item)))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/RealizarPedido/PagoPedido?pedidoId=99"));
+        String vista = gestorPedidos.realizarPedido(restauranteId, pedidoItems, session, model);
 
-        Mockito.verify(itemPedidoDAO).save(Mockito.any(ItemPedido.class));
-        Mockito.verify(pedidoService).crearPedido(Mockito.any(Pedido.class));
+        assertEquals("redirect:/RealizarPedido/PagoPedido?pedidoId=123", vista);
+        verify(itemPedidoDAO, times(2)).save(any(ItemPedido.class));
+        verify(pedidoService).crearPedido(any(Pedido.class));
     }
 
     @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/realizarPedido - sin cliente redirige a error")
-    void realizarPedido_sinCliente_lanzaError() throws Exception {
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(new Usuario());
-        Mockito.when(loginService.findClienteByUsuario(Mockito.any())).thenReturn(null);
+    @DisplayName("CU2 - email nulo, restauranteId nulo, cliente nulo → lanza NullPointerException")
+    void testRealizarPedido_CamposNulos_LanzaExcepcion() {
+        Long restauranteId = null;
+        String email = null;
+        List<ItemPedido> pedidoItems = new java.util.ArrayList<>();
 
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/realizarPedido")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("restauranteId", "1")
-                        .flashAttr("pedidoItems", List.of()))
-                .andExpect(status().isOk())
-                .andExpect(view().name("error"));
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(any())).thenThrow(NullPointerException.class);
+
+        assertThrows(NullPointerException.class, () -> {
+            gestorPedidos.realizarPedido(restauranteId, pedidoItems, session, model);
+        });
     }
 
     @Test
-    @DisplayName("POST /RealizarPedido/RestaurantePedido/realizarPedido - sin items redirige con error")
-    void realizarPedido_sinItems_redirigeError() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente(); cliente.setDirecciones(new HashSet<>());
+    @DisplayName("CU3 - restauranteId inexistente, email inválido → cliente y restaurante nulos → excepción")
+    void testRealizarPedido_ClienteYRestauranteInexistentes_LanzaExcepcion() {
+        Long restauranteId = 999L;
+        String email = "noexiste@mail.com";
+        List<ItemPedido> pedidoItems = new java.util.ArrayList<>(List.of(
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Pizza", 10.0, 1),
+                new ItemPedido(TipoItemMenu.PRIMER_PLATO, "Hamburguesa", 8.0, 1)
+        ));
 
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(email)).thenReturn(null);
+        when(loginService.findClienteByUsuario(null)).thenReturn(null);
+        when(restauranteService.obtenerRestaurantePorId(restauranteId)).thenReturn(null);
 
-        mockMvc.perform(post("/RealizarPedido/RestaurantePedido/realizarPedido")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("restauranteId", "1")
-                        .flashAttr("pedidoItems", List.of()))
-                .andExpect(status().isOk())
-                .andExpect(view().name("error"));
+        doAnswer(invocation -> {
+            Pedido pedido = invocation.getArgument(0);
+            pedido.setId(999L);
+            return null;
+        }).when(pedidoService).crearPedido(any());
 
-        Mockito.verify(pedidoService, Mockito.never()).crearPedido(Mockito.any());
-        Mockito.verify(itemPedidoDAO, Mockito.never()).save(Mockito.any());
+        String vista = gestorPedidos.realizarPedido(restauranteId, pedidoItems, session, model);
+
+        assertEquals("redirect:/RealizarPedido/PagoPedido?pedidoId=999", vista);
+    }
+
+    //Test realizarPago
+    @Test
+    @DisplayName("CU1 - PedidoId nulo, email nulo, cliente y pedido nulos → error")
+    void testRealizarPago_CU1_CamposNulos_Error() {
+        Long pedidoId = null;
+        String email = null;
+        String codigoPostal = "99999"; // inválido (fuera de enum)
+        String municipio = "Toledo";
+
+
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(any())).thenReturn(null);
+        when(loginService.findClienteByUsuario(any())).thenReturn(null);
+        when(pedidoService.obtenerPedidoPorId(pedidoId)).thenReturn(null);
+
+        String vista = gestorPedidos.realizarPago(pedidoId, "Calle Falsa", "10", "", municipio, codigoPostal, MetodoPago.PAYPAL, session, model);
+
+        verify(model).addAttribute(eq("message"), contains("Error: Cliente o pedido no encontrado"));
+        assertEquals("error", vista);
     }
 
     @Test
-    @DisplayName("GET /RealizarPedido/PagoPedido - cliente y pedido válidos")
-    void mostrarPagoPedido_clienteYPedidoValidos_devuelveVista() throws Exception {
-        Usuario usuario = new Usuario();
+    @DisplayName("CU2 - Flujo válido completo, todo correcto → redirección exitosa")
+    void testRealizarPago_CU2_FlujoValido() {
+        Long pedidoId = 1L;
+        String email = "cliente@mail.com";
         Cliente cliente = new Cliente();
-        Restaurante restaurante = new Restaurante();
-
-        ItemPedido item = new ItemPedido();
-        item.setCantidad(2);
-        item.setPrecio(5.0);
+        cliente.setDirecciones(new ArrayList<>());
 
         Pedido pedido = new Pedido();
-        pedido.setItems(List.of(item));
+        pedido.setId(pedidoId);
+        Restaurante restaurante = new Restaurante();
+        Direccion direccionRestaurante = new Direccion();
+        restaurante.setDireccion(direccionRestaurante);
         pedido.setRestaurante(restaurante);
 
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(pedidoService.obtenerPedidoPorId(1L)).thenReturn(pedido);
+        Repartidor repartidor = new Repartidor();
+        repartidor.setDisponible(true);
 
-        mockMvc.perform(get("/RealizarPedido/PagoPedido")
-                        .param("pedidoId", "1")
-                        .sessionAttr("email", "cliente@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("PagoPedido"))
-                .andExpect(model().attributeExists("cliente", "pedido", "restaurante", "total"))
-                .andExpect(model().attribute("total", 10.0));
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(email)).thenReturn(new Usuario());
+        when(loginService.findClienteByUsuario(any())).thenReturn(cliente);
+        when(pedidoService.obtenerPedidoPorId(pedidoId)).thenReturn(pedido);
+        when(RepartoService.obtenerRepartidorDisponible()).thenReturn(repartidor);
+        when(pedidoService.guardarPago(any())).thenAnswer(inv -> inv.getArgument(0));
+        when(pedidoService.guardarServicioEntrega(any())).thenAnswer(inv -> inv.getArgument(0));
+
+        String vista = gestorPedidos.realizarPago(pedidoId, "Calle Real", "5", "", "Talavera", "45600", MetodoPago.MasterCard, session, model);
+
+        assertEquals("redirect:/", vista);
+        verify(model).addAttribute(eq("message"), contains("Pago realizado con éxito"));
+        verify(pedidoService).guardarDireccion(any());
+        verify(pedidoService).guardarPago(any());
+        verify(pedidoService).guardarServicioEntrega(any());
+        verify(pedidoService, atLeastOnce()).actualizarPedido(any());
+        verify(RepartoService).actualizarRepartidor(repartidor);
     }
+
 
     @Test
-    @DisplayName("POST /RealizarPedido/PagoPedido/realizarPago - datos correctos realiza pago y redirige")
-    void realizarPago_datosValidos_creaPagoYRedirige() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente(); cliente.setDirecciones(new HashSet<>());
-        Restaurante restaurante = new Restaurante(); restaurante.setDireccion(new Direccion());
+    @DisplayName("CU3 - PedidoId inexistente, email inválido, cliente null → error")
+    void testRealizarPago_CU3_EmailYPedidoInvalidos_Error() {
+        Long pedidoId = 999L;
+        String email = "noexiste@mail.com";
+        String codigoPostal = "45600";
+        String municipio = "Toledo";
 
-        Pedido pedido = new Pedido(); pedido.setRestaurante(restaurante);
-        ReflectionTestUtils.setField(pedido, "id", 42L);
+        when(session.getAttribute("email")).thenReturn(email);
+        when(loginService.findUsuarioById(email)).thenReturn(null); // usuario no encontrado
+        when(loginService.findClienteByUsuario(null)).thenReturn(null); // cliente no encontrado
+        when(pedidoService.obtenerPedidoPorId(pedidoId)).thenReturn(null); // pedido no encontrado
 
-        Repartidor repartidor = new Repartidor(); repartidor.setDisponible(true);
-        Direccion direccion = new Direccion();
+        String vista = gestorPedidos.realizarPago(pedidoId, "Calle Luna", "7", "", municipio, codigoPostal, MetodoPago.Visa, session, model);
 
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(pedidoService.obtenerPedidoPorId(42L)).thenReturn(pedido);
-        Mockito.when(repartoService.obtenerRepartidorDisponible()).thenReturn(repartidor);
-
-        Mockito.when(pedidoService.guardarDireccion(Mockito.any())).thenReturn(direccion);
-        Mockito.when(pedidoService.guardarPago(Mockito.any())).thenReturn(new Pago());
-        Mockito.when(pedidoService.guardarServicioEntrega(Mockito.any())).thenReturn(new ServicioEntrega());
-
-        mockMvc.perform(post("/RealizarPedido/PagoPedido/realizarPago")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("pedidoId", "42")
-                        .param("calle", "Calle Falsa")
-                        .param("numero", "123")
-                        .param("complemento", "Piso 4")
-                        .param("municipio", "Madrid")
-                        .param("codigoPostal", "CP_28000")
-                        .param("metodoPago", "PAYPAL"))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/"));
-
-        Mockito.verify(pedidoService).guardarDireccion(Mockito.any());
-        Mockito.verify(pedidoService).guardarPago(Mockito.any());
-        Mockito.verify(pedidoService).guardarServicioEntrega(Mockito.any());
-        Mockito.verify(repartoService).actualizarRepartidor(repartidor);
+        verify(model).addAttribute(eq("message"), contains("Error: Cliente o pedido no encontrado"));
+        assertEquals("error", vista);
     }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/PagoPedido/realizarPago - cliente no encontrado redirige a error")
-    void realizarPago_sinCliente_redirigeError() throws Exception {
-        Usuario usuario = new Usuario();
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(null);
-
-        mockMvc.perform(post("/RealizarPedido/PagoPedido/realizarPago")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("pedidoId", "42")
-                        .param("calle", "Calle Falsa")
-                        .param("numero", "123")
-                        .param("complemento", "Piso 4")
-                        .param("municipio", "Madrid")
-                        .param("codigoPostal", "CP_28000")
-                        .param("metodoPago", "PAYPAL"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("error"));
-    }
-
-    @Test
-    @DisplayName("POST /RealizarPedido/PagoPedido/realizarPago - pedido no encontrado redirige a error")
-    void realizarPago_sinPedido_redirigeError() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente();
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-        Mockito.when(pedidoService.obtenerPedidoPorId(42L)).thenReturn(null);
-
-        mockMvc.perform(post("/RealizarPedido/PagoPedido/realizarPago")
-                        .sessionAttr("email", "cliente@mail.com")
-                        .param("pedidoId", "42")
-                        .param("calle", "Calle Falsa")
-                        .param("numero", "123")
-                        .param("complemento", "Piso 4")
-                        .param("municipio", "Madrid")
-                        .param("codigoPostal", "CP_28000")
-                        .param("metodoPago", "PAYPAL"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("error"));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/EstadoPedido - con sesión válida devuelve pedidos del cliente")
-    void estadoPedido_conSesion_devuelvePedidos() throws Exception {
-        Usuario usuario = new Usuario();
-        Cliente cliente = new Cliente();
-        Pedido pedido1 = new Pedido();
-        Pedido pedido2 = new Pedido();
-        cliente.setPedidos(List.of(pedido1, pedido2));
-
-        Mockito.when(loginService.findUsuarioById("cliente@mail.com")).thenReturn(usuario);
-        Mockito.when(loginService.findClienteByUsuario(usuario)).thenReturn(cliente);
-
-        mockMvc.perform(get("/RealizarPedido/EstadoPedido")
-                        .sessionAttr("email", "cliente@mail.com"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("EstadoPedido"))
-                .andExpect(model().attributeExists("pedidos"))
-                .andExpect(model().attribute("pedidos", org.hamcrest.Matchers.hasSize(2)));
-    }
-
-    @Test
-    @DisplayName("GET /RealizarPedido/EstadoPedido - sin sesión redirige con error")
-    void estadoPedido_sinSesion_redirigeError() throws Exception {
-        mockMvc.perform(get("/RealizarPedido/EstadoPedido"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("EstadoPedido"))
-                .andExpect(model().attributeExists("pedidos"))
-                .andExpect(model().attribute("pedidos", org.hamcrest.Matchers.empty()));
-    }
-
 
 
 }
+
+
